<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sv_content"
    android:orientation="vertical"
    tools:context=".ui.detailmovie.DetailMovieActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_bg"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@color/teal_200"
                tools:ignore="ContentDescription"/>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:layout_marginTop="170dp"
                android:src="@color/teal_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="76dp"
                android:text="@string/title_film"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_poster" />

            <TextView
                android:id="@+id/tv_detail_judul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_film"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="@font/roboto"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:text="@string/rating"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_detail_judul"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_judul" />

            <RatingBar
                android:id="@+id/bar_rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/yellow"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/bar_rating"
                app:layout_constraintTop_toBottomOf="@+id/bar_rating" />

            <TextView
                android:id="@+id/tv_detail_bahasa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="@font/roboto"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:text="@string/genre_film"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_detail_bahasa"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_deskripsi" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail_genre"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/genre_film"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:listitem="@layout/list_genre"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4"/>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_releas"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"
                app:layout_constraintEnd_toEndOf="@+id/rv_detail_genre"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/iv_poster"
                app:layout_constraintTop_toBottomOf="@+id/rv_detail_genre" />

            <TextView
                android:id="@+id/tv_detail_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_releas"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:fontFamily="@font/roboto"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

            <TextView
                android:id="@+id/tv_detail_deskripsi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/description"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</ScrollView>