<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_movie"
        android:icon="@drawable/ic_movies"
        android:title="Movie"/>

    <item
        android:id="@+id/menu_tv_show"
        android:icon="@drawable/ic_tv_show"
        android:title="TV Show"/>
</menu>